--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
     name: django-web
-    env: python
+    env: python 
+    pythonVersion: 3.11
     buildCommand: ""
     startCommand: gunicorn backend.wsgi:application
     envVars:
